# UNO_MINDA

./: .env.example  .gitignore  API.md  DEPLOY.md  DOCKER.md  Dockerfile  README.md  config.py  data.py  docker-compose.yml  pyproject.toml  requirements.txt  security.py  server.py  services.py  uno_minda_intelligence.py
